--- a/ui/main.css
+++ b/ui/main.css
@@ -1,36 +1,15 @@
 #main {
     position: relative;
     text-align: center;
-    top: 10%;
+    top: 5%;
     width: 80%;
     margin: auto;
 }
-#banner {
-    position: fixed;
-    display: inline-block;
-    bottom: 10%;
-    right: 1%;
-    max-width: 400px;
-    height: auto;
-    opacity: 0.3;
-    user-select: none;
-}
+
 #notification h4 {
     font-weight: bold; 
     margin: 0; 
     color: white !important;
-}
-
-.content:after {
-    position: absolute;
-    border-radius: 5px;
-    width: 100%;
-    left: 0;
-    top: 0;
-    height: 100%;
-    pointer-events: none;
-    background: repeating-linear-gradient(180deg, rgba(0,0,0, 0),rgba(0, 0, 0, 0.05) 4px, rgba(0,0,0, 0) 4px,rgba(0,0,0, 0.05) 4px);
-    content:' ';
 }
 
 .page-title {
@@ -44,6 +23,7 @@
     max-width: 50%;
     max-height: 550px;
     overflow-y: auto;
+    margin-left: 5%;
     height: auto;
     text-align: left;
     user-select: none;
@@ -73,9 +53,9 @@
     border-radius: 5px;
 }
 .nav-active {
-    text-decoration: underline;
-    font-weight: bold;
+    background-color: #47aa9a;
 }
+
 .ellipsis {
     position: relative;
     width: 200px;
@@ -104,7 +84,8 @@ br {
 }
 p {
     font-family: "Courier";
-    color: white;
+    color: #DCDCDC;
+
 }
 ul {
     list-style-type: none;
@@ -125,14 +106,4 @@ button:focus {
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey; 
     border-radius: 5px;
-}
-.line {
-    position: fixed;
-    width: 100%;
-    height: 3%;
-    }
-.line2 {
-    position: fixed;
-    width: 100%;
-    height: 1.5%;
 }
